--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,9 +19,12 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
     "cypress": "^13.16.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5"
   }
 }
