--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,10 +10,19 @@
     "test": "npx cypress verify & cypress run --component"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
+    "cookies-next": "^5.0.2",
     "cross-env": "^7.0.3",
+    "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "next": "^15.1.3",
     "react": "^19",
-    "react-dom": "^19"
+    "react-dom": "^19",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
+    "yup": "^1.6.1",
+    "yup-password": "^0.4.0"
   },
   "devDependencies": {
     "@types/node": "^22",
