--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,17 +10,29 @@
     "test": "npx cypress verify & cypress run --component"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-radio-group": "^1.2.2",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
-    "cookies-next": "^5.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cookies-next": "^5.1.0",
     "cross-env": "^7.0.3",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
-    "next": "^15.1.3",
+    "lucide-react": "^0.473.0",
+    "next": "^15.1.5",
     "react": "^19",
     "react-dom": "^19",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.4",
     "yup": "^1.6.1",
     "yup-password": "^0.4.0"
   },
@@ -29,10 +41,10 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
-    "cypress": "^13.17.0",
+    "cypress": "^14.0.0",
     "eslint": "^9",
-    "eslint-config-next": "15.1.3",
-    "postcss": "^8.4.49",
+    "eslint-config-next": "15.1.5",
+    "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
