--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,6 +26,7 @@
     "cookies-next": "^5.1.0",
     "cross-env": "^7.0.3",
     "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.473.0",
     "next": "^15.1.5",
