--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,16 +20,17 @@
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@reduxjs/toolkit": "^2.8.2",
+    "@tanstack/react-query": "^5.83.0",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cookies-next": "^6.0.0",
+    "cookies-next": "^6.1.0",
     "cross-env": "^7.0.3",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
-    "next": "^15.3.5",
+    "next": "^15.4.2",
     "react": "^19",
     "react-dom": "^19",
     "react-redux": "^9.2.0",
@@ -46,9 +47,9 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
-    "cypress": "^14.5.1",
+    "cypress": "^14.5.2",
     "eslint": "^9",
-    "eslint-config-next": "15.3.5",
+    "eslint-config-next": "15.4.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
