--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
-    "eslint": "^9.31.0",
+    "eslint": "^9.32.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
@@ -22,7 +22,7 @@
     "turbo": "^2.5.5"
   },
   "name": "finpro-nextjs-express-prisma",
-  "packageManager": "npm@11.4.2",
+  "packageManager": "npm@11.5.1",
   "workspaces": [
     "apps/*",
     "packages/*"
@@ -31,5 +31,8 @@
     "hooks": {
       "pre-commit": "npx lint-staged"
     }
+  },
+  "dependencies": {
+    "@prisma/client": "^6.13.0"
   }
 }
